# load_map_file_in_gazebo

./: CMakeLists.txt  README.md  TranslatePythonMapDictToCPP.py  bainer_utm.json  factory.cc  factory.world  map_file.json  map_file.txt
models/box/: model.sdf
models/grape_vine/: grapevine.mtl  model.config  model.sdf
models/grape_vine/meshes/: grapevine.dae
